--- a/META.yml
+++ b/META.yml
@@ -3,8 +3,12 @@ abstract: 'Deal with edges independent of a Graph'
 author:
   - 'Kent Fredric <kentfredric@gmail.com>'
 build_requires:
+  GraphViz2: 0
   Module::Build: 0.4203
+  Path::Tiny: 0
+  Test::Fatal: 0
   Test::More: 1.001002
+  parent: 0
 configure_requires:
   Module::Build: 0.4203
 dynamic_config: 0
@@ -27,6 +31,10 @@ requires:
   strict: 0
   utf8: 0
   warnings: 0
+resources:
+  bugtracker: https://github.com/kentfredric/GraphViz2-Abstract-Edge/issues
+  homepage: https://github.com/kentfredric/GraphViz2-Abstract-Edge
+  repository: https://github.com/kentfredric/GraphViz2-Abstract-Edge.git
 version: 0.001000
 x_BuiltWith:
   modules:
@@ -75,16 +83,20 @@ x_BuiltWith:
     Dist::Zilla::Plugin::UploadToCPAN: 5.006
     Dist::Zilla::PluginBundle::Author::KENTNL: 2.005000
     Dist::Zilla::PluginBundle::Author::KENTNL::Lite: 1.7.2
+    GraphViz2: 2.22
     Module::Build: 0.4203
+    Path::Tiny: 0.047
     Pod::Coverage::TrustPod: 0.100003
     Scalar::Util: 1.35
     Test::CPAN::Changes: 0.26
     Test::CPAN::Meta: 0.23
+    Test::Fatal: 0.013
     Test::Kwalitee: 1.17
     Test::More: 1.001002
     Test::Pod: 1.48
     Test::Pod::Coverage: 1.08
     constant: 1.29
+    parent: 0.228
     strict: 1.08
     utf8: 1.13
     version: 0.9904
